--- a/config/nginx/account.conf
+++ b/config/nginx/account.conf
@@ -1,5 +1,6 @@
 server {
     listen 80;
+    listen 443 ssl;
     server_name account.pretendo.cc c.account.pretendo.cc conntest.pretendo.cc
     nasc.pretendo.cc datastore.pretendo.cc api.pretendo.cc assets.pretendo.cc;
 
