--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -1,7 +1,7 @@
 user nginx;
 worker_processes auto;
 
-error_log /var/log/nginx/error.log notice;
+error_log /var/log/nginx/error.log info;
 pid /var/run/nginx.pid;
 
 
@@ -14,9 +14,9 @@ http {
     include /etc/nginx/mime.types;
     default_type application/octet-stream;
 
-    log_format main '$remote_addr - $remote_user [$time_local] "$request" '
-    '$status $body_bytes_sent "$http_referer" '
-    '"$http_user_agent" "$http_x_forwarded_for"';
+    log_format main '$remote_addr - $remote_user [$time_local] ($ssl_protocol '
+    '$ssl_cipher) $host "$request" $status $body_bytes_sent "$http_referer" '
+    '"$http_user_agent" $request_time';
 
     access_log /var/log/nginx/access.log main;
 
@@ -25,6 +25,13 @@ http {
     keepalive_timeout 65;
 
     resolver 127.0.0.11 valid=600s;
+
+    ssl_certificate /etc/nginx/mitmproxy-certs/mitmproxy-ca-cert.pem;
+    ssl_certificate_key /etc/nginx/mitmproxy-certs/mitmproxy-ca.pem;
+
+    # The Wii U needs to connect using TLSv1.0
+    ssl_protocols TLSv1 TLSv1.1 TLSv1.2 TLSv1.3;
+    ssl_ciphers DEFAULT:ECDHE-RSA-AES128-SHA:@SECLEVEL=0;
 
     include /etc/nginx/conf.d/*.conf;
 }
