--- a/config/nginx/cdn.conf
+++ b/config/nginx/cdn.conf
@@ -1,5 +1,6 @@
 server {
     listen 80;
+    listen 443 ssl;
     server_name cdn.pretendo.cc mii.olv.pretendo.cc pretendo-cdn.b-cdn.net;
 
     set $upstream http://pn-cdn.minio:9000;
