--- a/config/nginx/miiverse-api.conf
+++ b/config/nginx/miiverse-api.conf
@@ -1,5 +1,6 @@
 server {
     listen 80;
+    listen 443 ssl;
     server_name api.olv.pretendo.cc api-test.olv.pretendo.cc api-dev.olv.pretendo.cc
     discovery.olv.pretendo.cc discovery-test.olv.pretendo.cc discovery-dev.olv.pretendo.cc;
 
