--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,6 +14,9 @@ jobs:
               with:
                   submodules: true
 
+            - name: Set TERM environment variable
+              run: echo "TERM=xterm" >> $GITHUB_ENV
+
             - name: Test submodule patches script
               run: ./scripts/setup-submodule-patches.sh
 
