Enable caching for the Docker build

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -41,3 +41,6 @@ jobs:
                   pull: true
                   load: true
                   push: false
+                  set: |
+                      *.cache-from=type=gha
+                      *.cache-to=type=gha,mode=max
