Fix submodule directory

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,7 +8,7 @@ updates:
           - MatthewL246
 
     - package-ecosystem: gitsubmodule
-      directory: /repos/
+      directory: /
       schedule:
           interval: daily
       assignees:
