--- a/compose.yml
+++ b/compose.yml
@@ -73,6 +73,9 @@ services:
         source: ./config/nginx
         target: /etc/nginx/conf.d/
         read_only: true
+      - type: bind
+        source: ./logs/nginx/
+        target: /var/log/nginx/
       - type: volume
         source: mitmproxy-pretendo-data
         target: /etc/nginx/mitmproxy-certs
@@ -234,6 +237,9 @@ services:
       # For the Node.js debugger
       - 127.0.0.1:9229:9229
     volumes:
+      - type: bind
+        source: ./logs/account/
+        target: /app/logs/
       - type: volume
         source: account-certificates
         target: /app/certs
@@ -255,6 +261,9 @@ services:
       - 127.0.0.1:9230:9230
     volumes:
       - type: bind
+        source: ./logs/website/
+        target: /app/logs/
+      - type: bind
         source: ./config/website-config.json
         target: /app/config.json
         read_only: true
@@ -273,6 +282,10 @@ services:
       - 6000:6000/udp
       # Secure server
       - 6001:6001/udp
+    volumes:
+      - type: bind
+        source: ./logs/friends/
+        target: /build/log/
     networks:
       internal:
     dns: 172.20.0.200
@@ -290,6 +303,10 @@ services:
     ports:
       # For the Node.js debugger
       - 127.0.0.1:9231:9231
+    volumes:
+      - type: bind
+        source: ./logs/miiverse-api/
+        target: /app/logs/
     networks:
       internal:
     dns: 172.20.0.200
@@ -308,6 +325,9 @@ services:
       # For the Node.js debugger
       - 127.0.0.1:9232:9232
     volumes:
+      - type: bind
+        source: ./logs/juxtaposition-ui/
+        target: /app/src/logs/
       - type: bind
         source: ./config/juxtaposition-config.js
         target: /app/config.js
@@ -328,6 +348,10 @@ services:
     ports:
       # Authentication server
       - 6002:6002/udp
+    volumes:
+      - type: bind
+        source: ./logs/friends/
+        target: /app/log/
     networks:
       internal:
     dns: 172.20.0.200
@@ -345,6 +369,10 @@ services:
     ports:
       # Secure server
       - 6003:6003/udp
+    volumes:
+      - type: bind
+        source: ./logs/friends/
+        target: /app/log/
     networks:
       internal:
     dns: 172.20.0.200
