--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -1,7 +1,6 @@
 user nginx;
 worker_processes auto;
 
-error_log /var/log/nginx/error.log info;
 pid /var/run/nginx.pid;
 
 
@@ -19,6 +18,9 @@ http {
     '"$http_user_agent" $request_time';
 
     access_log /var/log/nginx/access.log main;
+    access_log /dev/stdout main;
+    error_log /var/log/nginx/error.log info;
+    error_log /dev/stderr info;
 
     sendfile on;
 
