--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,7 @@
 [submodule "repos/mitmproxy-pretendo"]
 path = repos/mitmproxy-pretendo
 url = https://github.com/MatthewL246/mitmproxy-pretendo.git
-branch = main
+branch = master
 
 [submodule "repos/Inkay"]
 path = repos/Inkay
