Add cbvc nginx config

--- a/config/nginx/account.conf
+++ b/config/nginx/account.conf
@@ -2,7 +2,8 @@ server {
     listen 80;
     listen 443 ssl;
     server_name account.pretendo.cc c.account.pretendo.cc conntest.pretendo.cc
-    nasc.pretendo.cc datastore.pretendo.cc api.pretendo.cc assets.pretendo.cc;
+    cbvc.cdn.pretendo.cc nasc.pretendo.cc datastore.pretendo.cc api.pretendo.cc
+    assets.pretendo.cc;
 
     # This prevents nginx from exiting on startup if it can't resolve the upstream
     set $upstream http://account:8080;
