Fix mongo-express and disable unnecessary authentication

--- a/environment/mongo-express.env
+++ b/environment/mongo-express.env
@@ -1,3 +1,4 @@
-ME_CONFIG_MONGODB_SERVER=mongodb
-ME_CONFIG_MONGODB_PORT=27017
-ME_CONFIG_BASICAUTH_USERNAME=mongo_express_pretendo
+PORT=8082
+ME_CONFIG_BASICAUTH=false
+ME_CONFIG_MONGODB_URL=mongodb://mongodb:27017
+ME_CONFIG_MONGODB_ENABLE_ADMIN=true
