Boring and unimportant commit

--- a/environment/account.env
+++ b/environment/account.env
@@ -15,5 +15,5 @@ PN_ACT_CONFIG_EMAIL_PORT=1025
 PN_ACT_CONFIG_EMAIL_SECURE=false
 PN_ACT_CONFIG_EMAIL_USERNAME=pretendo_mail
 PN_ACT_CONFIG_EMAIL_PASSWORD=password
-PN_ACT_CONFIG_EMAIL_FROM="Pretendo Mail <pretendo_mail@maildev.pretendo.cc>"
+PN_ACT_CONFIG_EMAIL_FROM="Jon Pretendo <jon@maildev.pretendo.cc>"
 PN_ACT_CONFIG_GRPC_PORT=5000
