--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,17 +18,24 @@ jobs:
           submodules: true
 
       - name: Set TERM environment variable
-        run: echo "TERM=xterm" >> $GITHUB_ENV
+        run: echo "TERM=xterm" >> "$GITHUB_ENV"
+
+      # Trying to expose ports in GitHub Actions causes a "bind: address already
+      # in use" error. Also, restarting containers should be disabled for
+      # testing whether any exit.
+      - name: Remove exposed ports configuration and disable container restart
+        run: |
+          yq eval 'del(.services.*.ports)' -i compose.yml
+          yq eval '.services.*.restart = "no"' -i compose.yml
 
       - name: Run the setup script
         run: ./setup.sh
 
-      - name: Build Docker images
-        uses: docker/bake-action@v4
-        with:
-          pull: true
-          load: true
-          push: false
-          set: |
-            *.cache-from=type=gha
-            *.cache-to=type=gha,mode=max
+      - name: Test starting the servers
+        run: |
+          docker compose up -d
+          sleep 35
+          docker compose ps -a
+          docker compose logs
+          # Fail if any containers exited
+          ! docker compose ps -a | grep Exited
