Ignore submodule changes in git status

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,43 +7,52 @@ branch = master
 path = repos/Inkay
 url = https://github.com/PretendoNetwork/Inkay.git
 branch = main
+ignore = dirty
 
 [submodule "repos/account"]
 path = repos/account
 url = https://github.com/PretendoNetwork/account.git
 branch = dev
+ignore = dirty
 
 [submodule "repos/website"]
 path = repos/website
 url = https://github.com/PretendoNetwork/website.git
 branch = dev
+ignore = dirty
 
 [submodule "repos/friends"]
 path = repos/friends
 url = https://github.com/PretendoNetwork/friends.git
 branch = dev
+ignore = dirty
 
 [submodule "repos/miiverse-api"]
 path = repos/miiverse-api
 url = https://github.com/PretendoNetwork/miiverse-api.git
 branch = dev
+ignore = dirty
 
 [submodule "repos/juxtaposition-ui"]
 path = repos/juxtaposition-ui
 url = https://github.com/PretendoNetwork/juxtaposition-ui.git
 branch = dev
+ignore = dirty
 
 [submodule "repos/wiiu-chat-authentication"]
 path = repos/wiiu-chat-authentication
 url = https://github.com/PretendoNetwork/wiiu-chat-authentication.git
 branch = master
+ignore = dirty
 
 [submodule "repos/wiiu-chat-secure"]
 path = repos/wiiu-chat-secure
 url = https://github.com/PretendoNetwork/wiiu-chat-secure.git
 branch = master
+ignore = dirty
 
 [submodule "repos/BOSS"]
 path = repos/BOSS
 url = https://github.com/PretendoNetwork/BOSS
 branch = master
+ignore = dirty
