--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -5,10 +5,19 @@
             "label": "Start Docker Compose",
             "type": "shell",
             "command": "docker compose up -d --build --pull always",
+            "group": "build",
+            "problemMatcher": []
+        },
+        {
+            "label": "Run Docker Compose watch",
+            "type": "shell",
+            "command": "docker compose watch",
             "group": {
                 "kind": "build",
                 "isDefault": true
-            }
+            },
+            "isBackground": true,
+            "problemMatcher": []
         },
         {
             "label": "Build account",
