Reconfigure MinIO to be proxied through Nginx
This change is necessary because some games need to connect to a S3 server directly, and MinIO is limited to listening on one domain for virtual hosts.

--- a/compose.yml
+++ b/compose.yml
@@ -105,6 +105,7 @@ services:
     image: minio/minio:latest
     depends_on:
       - coredns-internal
+      - nginx
     restart: unless-stopped
     ports:
       # Web console
