--- a/config/nginx/cdn.conf
+++ b/config/nginx/cdn.conf
@@ -3,12 +3,8 @@ server {
     listen 443 ssl;
     server_name cdn.pretendo.cc mii.olv.pretendo.cc pretendo-cdn.b-cdn.net;
 
-    set $upstream http://pn-cdn.minio:9000;
+    set $upstream http://pn-cdn.minio.pretendo.cc;
     location / {
-        limit_except GET HEAD {
-            deny all;
-        }
-
         proxy_pass $upstream;
     }
 }
