--- a/environment/miiverse-api.env
+++ b/environment/miiverse-api.env
@@ -2,7 +2,7 @@ PN_MIIVERSE_API_CONFIG_HTTP_PORT=8080
 PN_MIIVERSE_API_CONFIG_ACCOUNT_SERVER_ADDRESS=account
 PN_MIIVERSE_API_CONFIG_MONGO_CONNECTION_STRING=mongodb://mongodb:27017/pretendo_miiverse?replicaSet=rs
 PN_MIIVERSE_API_CONFIG_MONGOOSE_CONNECT_OPTIONS_PATH=/app/mongoose-connect-options.json
-PN_MIIVERSE_API_CONFIG_S3_ENDPOINT=http://minio:9000
+PN_MIIVERSE_API_CONFIG_S3_ENDPOINT=http://minio.pretendo.cc
 PN_MIIVERSE_API_CONFIG_S3_ACCESS_KEY=minio_pretendo
 PN_MIIVERSE_API_CONFIG_GRPC_FRIENDS_IP=friends
 PN_MIIVERSE_API_CONFIG_GRPC_FRIENDS_PORT=5001
