--- a/environment/super-mario-maker.env
+++ b/environment/super-mario-maker.env
@@ -1,6 +1,6 @@
 PN_SMM_AUTHENTICATION_SERVER_PORT=6004
 PN_SMM_SECURE_SERVER_PORT=6005
-PN_SMM_CONFIG_S3_ENDPOINT=minio:9000
+PN_SMM_CONFIG_S3_ENDPOINT=minio.pretendo.cc
 PN_SMM_CONFIG_S3_ACCESS_KEY=minio_pretendo
 PN_SMM_CONFIG_S3_BUCKET=super-mario-maker
 PN_SMM_ACCOUNT_GRPC_HOST=account
