Configure Juxtaposition with Redis

--- a/environment/juxtaposition-ui.env
+++ b/environment/juxtaposition-ui.env
@@ -11,3 +11,5 @@ JUXT_CONFIG_WHITELIST=1|http,mii.olv.pretendo.cc,,2|1|https,mii.olv.pretendo.cc,
 JUXT_CONFIG_POST_LIMIT=20
 JUXT_CONFIG_AWS_SPACES_ENDPOINT=http://minio.pretendo.cc
 JUXT_CONFIG_AWS_SPACES_KEY=minio_pretendo
+JUXT_CONFIG_REDIS_HOST=redis
+JUXT_CONFIG_REDIS_PORT=6379
