--- a/compose.yml
+++ b/compose.yml
@@ -296,6 +296,7 @@ services:
     depends_on:
       - account
       - mongodb
+      - redis
       - friends
     restart: unless-stopped
     ports:
