Update BOSS submodule and configure connection to friends

--- a/environment/boss.env
+++ b/environment/boss.env
@@ -10,3 +10,5 @@ PN_BOSS_CONFIG_S3_ENDPOINT=http://minio.pretendo.cc
 PN_BOSS_CONFIG_S3_REGION=us-east-1
 PN_BOSS_CONFIG_S3_BUCKET=pn-boss
 PN_BOSS_CONFIG_S3_ACCESS_KEY=minio_pretendo
+PN_BOSS_CONFIG_GRPC_FRIENDS_SERVER_ADDRESS=friends
+PN_BOSS_CONFIG_GRPC_FRIENDS_SERVER_PORT=5001
