Rewrite scripts and improve user-friendliness
- Update all of the scripts to use Bash instead of sh so I can use arrays and other bashisms
- Create a complete Bash option parsing framework to replace function-lib.sh
- Rewrite all of the scripts to use this framework
- General script user-friendliness improvements, including loading existing environment variables by default instead of always requiring them to be specified

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,7 +25,7 @@ jobs:
         run: yq eval "del(.services.*.ports)" -i compose.yml
 
       - name: Run the setup script
-        run: ./setup.sh
+        run: ./setup.sh --server-ip 127.0.0.1 --force
 
       # Testing whether any containers exit requires disabling restarts
       - name: Remove container restart configuration
