--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,16 +20,11 @@ jobs:
       - name: Set TERM environment variable
         run: echo "TERM=xterm" >> "$GITHUB_ENV"
 
-      # Trying to expose ports in GitHub Actions causes a "bind: address already in use" error
-      - name: Remove exposed ports configuration
-        run: yq eval "del(.services.*.ports)" -i compose.yml
+      - name: Apply Docker Compose CI overrides
+        run: ln -s compose.override.yml .github/compose.ci.yml
 
       - name: Run the setup script
         run: ./setup.sh --server-ip 127.0.0.1 --force
-
-      # Testing whether any containers exit requires disabling restarts
-      - name: Remove container restart configuration
-        run: yq eval "del(.services.*.restart)" -i compose.yml
 
       - name: Test starting the servers
         run: |
