Disable unused and broken nginx SSL support
It was causing timing issues in CI because of mitmproxy's certificate generation. Making this work for real will require compiling nginx from source anyway.

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -13,9 +13,8 @@ http {
     include /etc/nginx/mime.types;
     default_type application/octet-stream;
 
-    log_format main '$remote_addr - $remote_user [$time_local] ($ssl_protocol '
-    '$ssl_cipher) $host "$request" $status $body_bytes_sent "$http_referer" '
-    '"$http_user_agent" $request_time';
+    log_format main '$remote_addr - $remote_user [$time_local] $host "$request" $status $body_bytes_sent '
+    '"$http_referer" "$http_user_agent" "$http_x_forwarded_for" $request_time';
 
     access_log /var/log/nginx/access.log main;
     access_log /dev/stdout main;
@@ -27,13 +26,6 @@ http {
     keepalive_timeout 65;
 
     resolver 127.0.0.11 valid=600s;
-
-    ssl_certificate /etc/nginx/mitmproxy-certs/mitmproxy-ca-cert.pem;
-    ssl_certificate_key /etc/nginx/mitmproxy-certs/mitmproxy-ca.pem;
-
-    # The Wii U needs to connect using TLSv1.0
-    ssl_protocols TLSv1 TLSv1.1 TLSv1.2 TLSv1.3;
-    ssl_ciphers DEFAULT:ECDHE-RSA-AES128-SHA:@SECLEVEL=0;
 
     include /etc/nginx/conf.d/*.conf;
 }
