--- a/config/nginx/cdn.conf
+++ b/config/nginx/cdn.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name cdn.pretendo.cc mii.olv.pretendo.cc pretendo-cdn.b-cdn.net;
+    server_name mii.olv.pretendo.cc pretendo-cdn.b-cdn.net;
 
     set $upstream http://pn-cdn.minio.pretendo.cc;
     location / {
