Switch the account server to the PNID settings fork
The CDN base URL needs to be set to HTTP because the account server gets the Mii images using it, and nginx does not have a valid SSL certificate.

--- a/.gitmodules
+++ b/.gitmodules
@@ -11,8 +11,11 @@ ignore = dirty
 
 [submodule "repos/account"]
 path = repos/account
-url = https://github.com/PretendoNetwork/account.git
-branch = dev
+# TODO: Switch this back after https://github.com/PretendoNetwork/account/pull/91 is merged
+# url = https://github.com/PretendoNetwork/account.git
+# branch = dev
+url = https://github.com/CaramelKat/account.git
+branch = user-information-app
 ignore = dirty
 
 [submodule "repos/website"]
