--- a/environment/account.env
+++ b/environment/account.env
@@ -8,7 +8,7 @@ PN_ACT_CONFIG_WEBSITE_BASE=https://pretendo.network
 PN_ACT_CONFIG_REDIS_URL=redis://redis:6379
 PN_ACT_CONFIG_S3_ENDPOINT=http://minio.pretendo.cc
 PN_ACT_CONFIG_S3_ACCESS_KEY=minio_pretendo
-PN_ACT_CONFIG_CDN_BASE_URL=https://pretendo-cdn.b-cdn.net
+PN_ACT_CONFIG_CDN_BASE_URL=http://pretendo-cdn.b-cdn.net
 PN_ACT_CONFIG_CDN_SUBDOMAIN=cdn
 PN_ACT_CONFIG_EMAIL_HOST=maildev
 PN_ACT_CONFIG_EMAIL_PORT=1025
@@ -17,3 +17,4 @@ PN_ACT_CONFIG_EMAIL_USERNAME=pretendo_mail
 PN_ACT_CONFIG_EMAIL_PASSWORD=password
 PN_ACT_CONFIG_EMAIL_FROM="Jon Pretendo <jon@maildev.pretendo.cc>"
 PN_ACT_CONFIG_GRPC_PORT=5000
+PN_ACT_CONFIG_SERVER_ENVIRONMENT=prod
