Create verbose mode for all scripts and reduce default output
Man, dealing with passing arguments through multiple programs correctly is annoying. Tip: don't use eval, use "$@" instead.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,7 +24,7 @@ jobs:
         run: ln -s .github/compose.ci.yml compose.override.yml
 
       - name: Run the setup script
-        run: ./setup.sh --server-ip 127.0.0.1 --force
+        run: ./setup.sh --server-ip 127.0.0.1 --force --verbose
 
       - name: Test starting the servers
         run: |
