--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -37,10 +37,17 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Build the documentation
+      - name: Cache Docusaurus temp directory
+        uses: actions/cache@v4
+        with:
+          path: ./docs/.docusaurus
+          key: docusaurus-cache-${{ runner.os }}-${{ hashFiles('./docs/package-lock.json') }}-${{ github.sha }}
+          restore-keys: docusaurus-cache-${{ runner.os }}-${{ hashFiles('./docs/package-lock.json') }}-
+
+      - name: Build the documentation site
         run: npm run build
 
-      - name: Upload Pages artifact
+      - name: Upload GitHub Pages artifact
         uses: actions/upload-pages-artifact@v3
         with:
           path: ./docs/build
