Group Docusaurus dependency update PRs

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -14,3 +14,7 @@ updates:
     directory: /docs
     schedule:
       interval: daily
+    groups:
+      docusaurus:
+        patterns:
+          - "@docusaurus/*"
