--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,6 +12,8 @@ on:
 jobs:
   build-test:
     runs-on: ubuntu-latest
+    env:
+      TERM: xterm
     steps:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -20,10 +22,6 @@ jobs:
         uses: actions/checkout@v4
         with:
           submodules: true
-
-      - name: Set TERM environment variable
-        run: echo "TERM=xterm" >> "$GITHUB_ENV"
-
       - name: Apply Docker Compose CI overrides
         run: ln -s .github/compose.ci.yml compose.override.yml
 
